support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_extra_rblock.stderr
c_extra_rblock.i:5: Error: Syntax error. Extraneous '%}'
